# trrkuwaganon

./: .gitignore  CMakeLists.txt  Makefile
document/: NormalizedDutyと車輪速度.xlsx  wsl2_setup_history.txt  ターン前壁切れ参考資料.pptx  吸引時時間vs電圧.xlsx  壁センサAD値距離変換.xlsx  座標系方位定義.md
document/img/: 画像作成用.pptx
generate/: hwinit.c  interrupt_handlers.h  inthandler.c  iodefine.h  linker_script.ld  start.S  vects.c
param/: 20220201_0218.ttl  20220213_param.ttl  20220215_param.ttl  20220219_param.ttl  20220223_param.ttl  20220226_param.ttl  20220227_2_param.ttl  20220227_param.ttl  20220310_大会前自宅調整後_pram.ttl  20220311_試走会仮Fix.txt
src/: main.cpp  oneshotTask.cpp  oneshotTask.h  sils_main.cpp
src/ApplicationLayer/Activity/: activityFactory.cpp  activityFactory.h  baseActivity.h  calibrateFeedForwardActivity.cpp  calibrateFeedForwardActivity.h  calibrateWallCenterActivity.cpp  calibrateWallCenterActivity.h  debugActivity.cpp  debugActivity.h  deleteMazeActivity.cpp  deleteMazeActivity.h  fullAutoRunActivity.cpp  fullAutoRunActivity.h  intent.h  modeSelectActivity.cpp  modeSelectActivity.h  radioControlActivity.cpp  radioControlActivity.h  searchRunActivity.cpp  searchRunActivity.h  shortestRunActivity.cpp  shortestRunActivity.h  subModeSelectActivity.cpp  subModeSelectActivity.h
src/ApplicationLayer/Lib/: debugLog.h  intMollifierTbl.h  mollifier.cpp  mollifier.h  pidController.h  tableLinearInterpolation.h
src/ApplicationLayer/Lib/Eigen/src/Cholesky/: LDLT.h  LLT.h  LLT_LAPACKE.h
src/ApplicationLayer/Lib/Eigen/src/CholmodSupport/: CholmodSupport.h
src/ApplicationLayer/Lib/Eigen/src/Core/: Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  Block.h  BooleanRedux.h  CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  ForceAlignedAccess.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  Inverse.h  Map.h  MapBase.h  MathFunctions.h  MathFunctionsImpl.h  Matrix.h  (+29 more)
src/ApplicationLayer/Lib/PathCalculation/: path.h  pathCalculation.cpp  pathCalculation.h  pathCompression.cpp  pathCompression.h
src/ApplicationLayer/Lib/ntshell/cmd/: usrcmd.cpp
src/ApplicationLayer/Lib/ntshell/core/: ntconf.h  ntshell.c
src/ApplicationLayer/Message/: VehicleAttitudeMsg.h  actuatorOutputMsg.h  baseMsg.h  batteryInfoMsg.h  batteryVoltageMsg.h  ctrlSetpointMsg.h  dialPositionMsg.h  gamepadMsg.h  groundTruth.h  groundTruthMsg.h  imuMsg.h  msgBroker.cpp  msgBroker.h  navStateMsg.h  pidControlValMsg.h  positionEstimatorMsg.h  trajTripletMsg.h  vehicleAttitudeMsg.h  vehiclePositionMsg.h  wallSensorMsg.h  wheelOdometryMsg.h
src/ApplicationLayer/Module/: baseModule.h  batteryMonitor.cpp  batteryMonitor.h  batteryVoltageMonitor.cpp  batteryVoltageMonitor.h  communication.cpp  communication.h  controlMixer.cpp  controlMixer.h  dial.cpp  dial.h  gamepad.cpp  gamepad.h  heater.cpp  heater.h  imuDriver.cpp  imuDriver.h  led.cpp  led.h  ledController.cpp  ledController.h  logger.cpp  logger.h  navigator.cpp  navigator.h  parameterManager.cpp  parameterManager.h  positionEstimator.cpp  positionEstimator.h  powerTransmission.cpp  powerTransmission.h  pseudoDial.cpp  pseudoDial.h  runAnalizer.cpp  runAnalizer.h  seManager.cpp  seManager.h  shell.cpp  shell.h  suction.cpp  (+11 more)
src/ApplicationLayer/Object/: dial.cpp  dial.h  led.cpp  led.h  maze.cpp  maze.h  mazeArchive.h  navigationEnum.h  trajectory.cpp  trajectory.h  trajectoryFactory.cpp  trajectoryFactory.h  turnEnum.h  turnIterator.h  turnParameter.h  turnPreCalculation.cpp  turnPreCalculation.h  turnPreCalculations.cpp  turnPreCalculations.h
src/HardwareAbstractionLayer/: hal_ad.cpp  hal_ad.h  hal_clock.cpp  hal_clock.h  hal_critical_section.h  hal_da.cpp  hal_da.h  hal_flashRom.cpp  hal_flashRom.h  hal_gpio.cpp  hal_gpio.h  hal_phaseCounting.cpp  hal_phaseCounting.h  hal_pwm.cpp  hal_pwm.h  hal_spi.cpp  hal_spi.h  hal_timer.cpp  hal_timer.h  hal_timerInterrupt.cpp  hal_timerInterrupt.h  hal_uart.cpp  hal_uart.h  hal_wdt.cpp  hal_wdt.h
src/PeriferalDriverLayer/: pd_ad.cpp  pd_ad.h  pd_clock.cpp  pd_clock.h  pd_da.cpp  pd_da.h  pd_flashRom.cpp  pd_flashRom.h  pd_gpio.cpp  pd_gpio.h  pd_phaseCounting.cpp  pd_phaseCounting.h  pd_pwm.cpp  pd_pwm.h  pd_spi.cpp  pd_spi.h  pd_timer.cpp  pd_timer.h  pd_timerInterrupt.cpp  pd_timerInterrupt.h  pd_uart.cpp  pd_uart.h  pd_wdt.cpp  pd_wdt.h
src/PeripheralDriverLayer/: pd_ad.cpp  pd_ad.h  pd_clock.cpp  pd_clock.h  pd_da.cpp  pd_da.h  pd_flashRom.cpp  pd_flashRom.h  pd_gpio.cpp  pd_gpio.h  pd_phaseCounting.cpp  pd_phaseCounting.h  pd_pwm.cpp  pd_pwm.h  pd_spi.cpp  pd_spi.h  pd_timer.cpp  pd_timer.h  pd_timerInterrupt.cpp  pd_timerInterrupt.h  pd_uart.cpp  pd_uart.h  pd_wdt.cpp  pd_wdt.h
src/SilsUtil/: picojson.h  sendData2Sim.cpp  sendData2Sim.h  udp.cpp  udp.h
test/simSearch/: CMakeLists.txt  main.cpp
test/simShortest/: CMakeLists.txt  main.cpp
test/traj/: CMakeLists.txt  main.cpp
test/trajSetpoint/: 20211028_test_trajSetpoint.xlsx  CMakeLists.txt  main.cpp
tool/UMazeSim/: UMazeEditor.html  index.html  index.js  package-lock.json  package.json  temp_maze.json
tool/UMazeSim/example/: udp_send_test.py
tool/UMazeSim/src/: config.yaml
tool/UMazeSim/src/js/: UMouseObject.js  byteUtil.js  offscreencanvas-worker-orbitcontrols.js  threejs-view.js
tool/UMazeSim/src/js/junk/: ThreeOffscreenWorker.js  ThreeUtil.js  index.html  osc_simple_worker.js
tool/UMazeSim/src/js/lib/: FileSaver.js  OrbitControls.js  STLExporter.js  STLLoader.js  three.js  three.module.js
tool/astyle/: astylerc  code_format.bat
tool/corner/: corner.ipynb
tool/doxygen/: DoxyFile  run_doxygen.bat
tool/regression/: log.csv  regression.ipynb
tool/regression/.ipynb_checkpoints/: regression-checkpoint.ipynb
tool/trajectory/: trajectory_HF_mouse_trrkuwaganon.ipynb
tool/trajectory/.ipynb_checkpoints/: trajectory_HF_mouse_trrkuwaganon-checkpoint.ipynb
(+193 files in other folders)
